--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -31,7 +31,7 @@
     width: 270px;
     overflow-x: hidden;
     transition: left 0.4s ease; 
-    background-color:#7E0001;
+    background-color: #9b000a;
     z-index: 9999;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     border-radius:0px 20px 20px 0px;
@@ -54,8 +54,8 @@
 }
   
 .sidebar button:hover {
-    background-color: #ab0303;
-    color: #ffc800;
+    background-color: #730000;
+    color: #ffbd00;
     font-weight: bold;
     padding: 20px;
     width: 100%;
@@ -71,7 +71,7 @@
  }
 
  .sidebar button .icon {
-    color: #f0c908;
+    color: #ffbd00;
     margin-right: 25px;
     margin-left: .5em;
     display: flex;
@@ -99,7 +99,7 @@
 
 .close-btn:hover {
     transform: translate(-50%, -50%) scale(1.1);
-    color: #f0c908;
+    color: #ffbd00;
 }
 
 .imglogo {
@@ -135,7 +135,7 @@
     text-align: center;
     height: 100%;
     width: 100%;
-    background-color: #7E0001;
+    background-color: #730000;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -184,7 +184,7 @@ button .icon {
 }
 
 button:hover .icon {
-    color: #ffc906;
+    color: #ffbd00;
 }
 
 .button-container {
@@ -205,7 +205,7 @@ button:hover .icon {
 }
 
 .text {
-    color:aliceblue;
+    color:rgb(255, 255, 255);
     font-size: 10px;
     font-family: Geneva, Tahoma, sans-serif;
     bottom: 10px;
@@ -225,7 +225,7 @@ button:hover .icon {
     height: 500px;
     max-width: 350px;
     margin: 0 auto;
-    background-color: #7E0001;
+    background-color: #730000;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -235,7 +235,7 @@ button:hover .icon {
 .popup-title {
     margin-top: 10px;
     padding-top: 20px;
-    color:#f0c908;
+    color:#ffbd00;
     font-size: 24px;
     font-family: Geneva, Tahoma, sans-serif;
     text-align: center;
@@ -316,7 +316,7 @@ button:hover .icon {
 .menu-content{
     width: 300px;
     height: 300px;
-    background-color: #7E0001;
+    background-color: #730000;
     top: 50%;
     bottom: 50%;
     text-align: center;
@@ -332,7 +332,7 @@ button:hover .icon {
 }
   
 .ReactModal__Content {
-    background-color: #7E0001;
+    background-color: #730000;
     border: 1px solid #ccc;
     padding: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
