--- a/src/greetingResponse/greet.css
+++ b/src/greetingResponse/greet.css
@@ -1,7 +1,7 @@
 .avatar-container  {
     position: fixed;
     width: 100%;
-    top: 24%;
+    top: 17%;
     overflow: hidden;
     z-index: 9;
 
@@ -10,20 +10,39 @@
 .avatar {
     max-width: 100%;
     max-height: 40vh;
+    overflow: hidden;
 }
 
-.hello{
+.hello {
     z-index: 99;
     font-size: 15px;
-    top: 19%;
-    position: fixed;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 100%;
+    width: 15em;
+    height:max-content;
     display: block;
-    padding: 10px;
-}
+    position: relative;
+    margin-left: 34.5%;
+    padding: 13px;
+    color: black;
+    background-color: #f1f1f1;
+    border-radius: 40px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  }
+  
+  .hello::before {
+    content: '';
+    position: fixed;
+    bottom: -20px; /* Adjust the distance of the arrow from the bottom */
+    right: 50%;
+    margin-left: 10px; /* Half of the arrow's width */
+    border-width: 10px 10px 0;
+    border-style: solid;
+    border-color: #f1f1f1 transparent transparent transparent;
+  }
+  
 
 .iskaDo{
     position: fixed;
