--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -31,7 +31,7 @@
     width: 270px;
     overflow-x: hidden;
     transition: left 0.4s ease; 
-    background-color: #9b000a;
+    background-color: #730000;
     z-index: 9999;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
     border-radius:0px 20px 20px 0px;
