--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -13,11 +13,6 @@
     justify-content: space-around;
     text-align: center;
 }
-.buttons-container p{
-    padding: 10px;
-    letter-spacing: 5px;
-    
-}
 
 .text-gif{
     position: relative;
@@ -64,14 +59,56 @@ position: relative;
 
 .buttons-container {
     padding: 20px;
-    width: 100%;
     position: relative;
-    top: 5.5em;
+    top: 6.5em;
     overflow: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: flexbox;
+    flex-direction:column;
     color: white;
+}
+
+/* Add these styles to your existing CSS file, e.g., 'building.css' */
+
+.image-grid {
+  display: grid;
+  justify-content: center;
+  gap: 10px;
+  padding: 5px;
+}
+
+.image-grid img {
+  max-width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+
+.image-grid p {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  position: relative;
+}
+
+.image-text p{
+  top: 0;
+  padding: 5px;
+  font-size: 13px;
+  position: relative;
+  color: #ffffff;
+}
+/* Add the rest of your styles as they are */
+/* Desktop styles - 3 columns */
+@media screen and (min-width: 768px) {
+  .image-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/* Mobile styles - 1 column */
+@media screen and (max-width: 767px) {
+  .image-grid {
+    grid-template-columns: (2, 2fr);
+  }
 }
 
 .title-area p{
