--- a/src/showRespose/showResponse.css
+++ b/src/showRespose/showResponse.css
@@ -2,10 +2,13 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     padding: 10px;
     top: 7em;
     overflow: auto;
+    color: white;
+    text-align: center;
+    width: 100%;
 }
 
 .step h4{
@@ -13,7 +16,7 @@
 }
 .step p{
     color: white;
-    text-align: left;
+    text-align: center;
     font-size: 20px;
     width: 100%;
 }
@@ -51,13 +54,14 @@ a{
     justify-content: center;
     display: grid;
     align-items: center;
+    color: white;
 }
 .step ul {
     justify-content: center;
     align-items: center;
     display: grid;
     color: white;
-    text-align: left;
+    text-align: center;
     padding: 15px;
     list-style:square;
     font-size: 17px;
@@ -65,7 +69,7 @@ a{
 }
 .lyrics li{
     color: white;
-    text-align: left;
+    text-align: center;
 }
 
 .imno{
