--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -1,11 +1,10 @@
 .menu {
     cursor: pointer;
-    height: 30px;
     position: relative;
     left: 0;
     top: 0;
     padding: 3px; 
-    z-index: 99; 
+    z-index: 100; 
 }
 
 .pdf-content-container{
@@ -337,4 +336,12 @@ button:hover .icon {
     padding: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     z-index: 1001;
+}
+
+.org-container {
+    position: relative;
+    overflow: auto;
+    height: 100%;
+    top: -8em;
+    padding: 20px;
 }
