--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -19,6 +19,7 @@
     color: #ffffff;
     text-align: center;
     align-items: center;
+    padding: 3px;
     width: 100%;
     top: 8em;
 }
@@ -33,20 +34,19 @@
     width: 45vh;
     height: fit-content;
     padding: 15px;
-    top: 7em;
+    top: 8em;
     
 }
 
 .back-button{
     display: flex;
-    position: relative;
-    justify-content: space-between;
-    width: max-content;
+    position: fixed;
     left: 0;
-    top: 5.3em;
+    top: 1.3em;
     padding: 10px;
-    z-index: 99;
+    z-index: 100;
     color: white;
+    overflow: hidden;
 }
 
 
@@ -55,6 +55,7 @@ display: inline-flexbox;
 justify-content: space-around;
 flex-direction: column;
 position: relative;
+height: 100%;
 }
 
 .buttons-container {
@@ -65,6 +66,7 @@ position: relative;
     display: flexbox;
     flex-direction:column;
     color: white;
+    height: 100%;
 }
 
 /* Add these styles to your existing CSS file, e.g., 'building.css' */
@@ -161,7 +163,7 @@ position: relative;
     justify-content: space-around;
     align-items:flex-start;
     width: 100%;
-    height: 46em;
+    height: 36em;
     text-align: center;
     position: relative;
     display: block;
