--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -75,6 +75,8 @@ height: 100%;
   justify-content: center;
   gap: 10px;
   padding: 5px;
+  position: relative;
+  height: max-content;
 }
 
 .image-grid img {
