--- a/src/App.css
+++ b/src/App.css
@@ -206,11 +206,16 @@ color: white;
   color: rgb(255, 255, 255);
   overflow:auto;
   padding: 5px;
+  height: 100%;
   line-height: 1.5; /* Adjust this value to control the line spacing */
   z-index: 98;
-  height: 90em;
   text-align: center;
   position: static;
+}
+
+.container-content{
+  position: relative;
+  height: 100%;
 }
 
 .displayResponse{
@@ -224,6 +229,11 @@ color: white;
   padding: 20px;
   border-radius: 5px;
   position:relative;
+}
+
+.buttons{
+  position: relative;
+  height: 100%;
 }
 
 
