--- a/src/Menu/Menu.css
+++ b/src/Menu/Menu.css
@@ -272,6 +272,7 @@ button:hover .icon {
 .virtual-container{
     padding: 10px;
     width: 100%;
+    height: 100%;
     position: relative;
     top: -2em;
 }
@@ -333,7 +334,6 @@ button:hover .icon {
 .ReactModal__Content {
     background-color: #730000;
     border: 1px solid #ccc;
-    padding: 30px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     z-index: 1001;
 }
@@ -342,6 +342,5 @@ button:hover .icon {
     position: relative;
     overflow: auto;
     height: 100%;
-    top: -8em;
     padding: 20px;
 }
