--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,7 @@ header{
   top: 0;
   position: fixed;
   width: 100%;
-  height: 7.3em;
+  height: 10%;
   z-index: 100;
   padding: 4px;
   overflow: -moz-hidden-unscrollable;
@@ -117,16 +117,18 @@ header{
 }
 
 .logo-name p{
-  bottom: 1.5em;
+  bottom: 20%;
   position: relative;
   display: block;
   margin: 0;
   line-height: normal;
-  font-size: 20px;
+  font-size: 15px;
+  z-index: 100;
+background-color: #730000;
 }
 
 .logo-name img{
-  width: 6em;
+  width: 60px;
   position: relative;
   align-items: center;
   justify-content: center;
@@ -205,17 +207,17 @@ color: white;
   white-space: pre-line;
   color: rgb(255, 255, 255);
   overflow:auto;
-  padding: 5px;
   height: 100%;
   line-height: 1.5; /* Adjust this value to control the line spacing */
   z-index: 98;
   text-align: center;
-  position: static;
+  position: relative;
 }
 
 .container-content{
   position: relative;
-  height: 100%;
+  height: 80px;
+  z-index: 98;
 }
 
 .displayResponse{
