--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -19,9 +19,9 @@
     color: #ffffff;
     text-align: center;
     align-items: center;
-    padding: 3px;
+    padding: 10px;
     width: 100%;
-    top: 8em;
+    top: 5.2em;
 }
 
 .gif{
@@ -34,7 +34,7 @@
     width: 45vh;
     height: fit-content;
     padding: 5px;
-    top: 8em;    
+    top: 5em;    
 }
 
 .back-button{
@@ -58,52 +58,46 @@ height: 100%;
 }
 
 .buttons-container {
-    top: 7em;
+    top: 5em;
     position: relative;
     overflow: auto;
     display: flexbox;
     flex-direction:column;
     color: white;
+    width: 100%;
     height: 100%;
     padding: 5px;
 }
 
 /* Add these styles to your existing CSS file, e.g., 'building.css' */
 .image-grid {
+  width: 100%;
   display: grid;
   justify-content: center;
   position: relative;
   height: 100%;
   padding: 5px;
-  gap: 1px 10px ;
 }
 
 .image-grid img {
-  max-width: 100%;
-  height: auto;
+  position: relative;
+  max-width: 150px;
+  max-height: 150px;
   cursor: pointer;
 }
 
-.image-grid p {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  position: relative;
-  width: 10px;
-  opacity: .8;
-  height: 33px;
-  align-items: center;
-}
 
 .image-text p {
   align-items: center;
+  justify-content: space-around;
   text-align: center;
-  top: -20%;
   font-size: 13px;
   position: relative;
   color: #ffffff;
-  width: 100%;
-  background-color: black;
+  max-width: 150px;
+  height: 40px;
+  left: 5%;
+  padding: 1px;
 
 }
 /* Add the rest of your styles as they are */
@@ -176,7 +170,7 @@ height: 100%;
     text-align: center;
     position: relative;
     display: block;
-    top: 9em;
+    top: 5em;
     color: white;
   }
 
