--- a/src/displayButton/displayDesign.css
+++ b/src/displayButton/displayDesign.css
@@ -8,12 +8,13 @@
 .choices-content p{
   position: fixed;
   color: white;
-  top: 15%;
+  top: 12%;
   z-index: 101;
+  padding: 5px;
 }
 
 .choices-button{
-  top: 20%;
+    top: 20%;
     display: flexbox;
     justify-content: space-around;
     overflow: hidden;
@@ -56,8 +57,8 @@
   overflow: hidden;
   left: 0;
   padding: 10px;
-  top: 0;
-  z-index: 105;
+  top: -.5em;
+  z-index: 101;
 }
 
 .choices-button p{
