--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -67,6 +67,7 @@ height: 100%;
     width: 100%;
     height: 100%;
     padding: 5px;
+    padding-bottom: 50px;
 }
 
 /* Add these styles to your existing CSS file, e.g., 'building.css' */
@@ -80,7 +81,6 @@ height: 100%;
 }
 
 .image-grid img {
-  position: relative;
   max-width: 150px;
   max-height: 150px;
   cursor: pointer;
@@ -89,14 +89,13 @@ height: 100%;
 
 .image-text p {
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   text-align: center;
   font-size: 13px;
   position: relative;
   color: #ffffff;
   max-width: 150px;
   height: 40px;
-  left: 5%;
   padding: 1px;
 
 }
