--- a/src/showRespose/showResponse.css
+++ b/src/showRespose/showResponse.css
@@ -1,24 +1,26 @@
 .step{
-    position: relative;
     display: flex;
     flex-direction: column;
+    text-align: justify;
     justify-content: center;
-    padding: 10px;
+    padding: 5px;
     overflow: auto;
     color: white;
     text-align: center;
     width: 100%;
-    height: 100%;
+    max-height: fit-content;
 }
-
-
 
 .step h4{
     color: white;
+    text-align: center;
+    font-size: 18px;
 }
 .step p{
     color: white;
-    text-align: center;
+    text-align: left;
+    justify-content: center;
+    align-items: center;
     font-size: 20px;
     width: 100%;
 }
@@ -61,19 +63,22 @@ a{
     color: white;
 }
 .step ul {
-    justify-content: center;
     align-items: center;
     display: grid;
     color: white;
-    text-align: center;
+    text-align: left;
+    justify-content: center;
     padding: 15px;
+    width: 100%;
     list-style:square;
     font-size: 17px;
 
 }
 .lyrics li{
     color: white;
-    text-align: center;
+    text-align: left;
+    align-items: center;
+    justify-content: center;
 }
 
 .imno{
@@ -232,7 +237,7 @@ a{
     height: 150px;
     cursor: pointer;
     border: #ffbd00 solid 3px;
-    border-radius: 10%;
+    border-radius: 50%;
     position: relative;
     
 }
@@ -255,7 +260,8 @@ a{
 .team-logo img{
     width: 100px;
     height: 100px;
-    position: relative;
+    border-radius: 50%;
+    box-shadow: 0px 0px 10px 2px white;    position: relative;
     align-items: center;
     justify-content: center;
 }
@@ -271,8 +277,7 @@ a{
     width: 150px;
     color: #ffffff;
     background-color:#ffbd00;
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    border-radius: 10px;
     left: 0;
   }
 @media screen and (min-width: 768px) {
@@ -286,6 +291,26 @@ a{
     .team-contents {
       grid-template-columns: repeat(2, 1fr);
     }
+  }
+
+  .button-feedback{
+    width: 100%;
+    text-align: center;
+  }
+
+  .modal-footer{
+    bottom: 0;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    background-color: #ffbd00;
+  }
+
+  .button-feedback button{
+    width: fit-content;
+    color:#ffbd00;
+    text-decoration: underline;
+    font-size: 20px;
   }
 
 .pop-form{
@@ -376,12 +401,15 @@ form{
 
 .director {
     width: 100%;
-    padding: 10px;
 }
 
 .director img {
-    width: 100px;
-    height: 100%;
+    max-width: 200px;
+    max-height: 100%;
+    border-radius: 50%;
+    border:#ffbd00 solid 3px;
+    background-image: url(../pictures/placePic/pup-logo.png);
+    background-size: cover;
 }
 
 .director p {
@@ -390,18 +418,25 @@ form{
 
 .head-list {
     display: grid;
-    position: relative;
+    gap: 10px;
     width: 100%;
     height: 100%;
 }
 
 .head-list img {
-    width: 100px;
-    height: 100px;
+    max-width: 150px;
+    max-height: 150px;
+    border-radius: 50%;
+    border:#ffbd00 solid 3px;
+    background-image: url(../pictures/placePic/pup-logo.png);
+    background-size: cover;
 }
 
 .head-list p{
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
     display: flex;
     font-size: 15px;
 }
