--- a/src/displayButton/displayDesign.css
+++ b/src/displayButton/displayDesign.css
@@ -9,10 +9,16 @@
   position: fixed;
   color: white;
   top: 12%;
-  z-index: 101;
+  z-index: 99;
   padding: 5px;
   text-align: center;
   width: 100%;
+}
+
+.choices-content img{
+  position: relative;
+  width: 170px;
+  height: 170px;
 }
 
 .choices-button{
