--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -262,3 +262,16 @@ height: 100%;
       grid-template-columns: (2, 2fr);
     }
   }
+
+  .map-img img {
+    width: 100%;
+    height: 100%;
+  }
+
+  .icon-container {
+    position: absolute;
+    z-index: 105;
+    top: 80%;
+    left: 59%;
+    cursor: pointer;
+  }
